fixed tier selection inputs on mobile

--- a/lol-pickem-app/src/app/play/play.component.scss
+++ b/lol-pickem-app/src/app/play/play.component.scss
@@ -1,4 +1,5 @@
 #tier-selection-row {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
